# datasheet-parser-new

./: .gitignore  CLAUDE.md  README.md  VISION_API_INTEGRATION.md  pyproject.toml  requirements.txt
docs/: pin_extraction_fix_solutions.md
src/: __init__.py  chat_bot.py  main.py  main_layout.py
src/core/: __init__.py  clean_output.py
src/llm/: __init__.py  client.py  image_ocr_client.py  page_verifier.py
src/model_generator/: __init__.py  cadquery_builder.py  glb_exporter.py
src/models/: __init__.py  pin_data.py
src/pdf_extractor/: __init__.py  content_extractor.py  image_detector.py  page_detector.py  pinout_filter.py
src/schematic_generator/: __init__.py  adapter.py  package_geometry.py  pin_layout.py  schematic_builder.py
src/utils/: __init__.py  package_detector.py
test_scripts/: test_adapter.py  test_cadquery.py  test_cadquery_api.py  test_chat_bot.py  test_content_extraction.py  test_end_to_end.py  test_package_geometry.py  test_page_detection.py  test_pin_extraction.py  test_pin_layout.py  test_schematic_builder.py  test_updated_params.py
tests/: __init__.py  test_models.py  test_package_detector.py
