[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasheet-parser"
version = "0.1.0"
description = "Extract pin data from electronic component datasheets and generate 3D CAD models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["datasheet", "electronics", "cad", "3d-modeling", "pinout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "pdfplumber>=0.9.0",
    "cadquery>=2.4.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

llm = [
    # Add your chosen LLM SDK here
    # "openai>=1.0.0",
    # "anthropic>=0.18.0",
]

# For GLB export (optional)
glb = [
    "trimesh>=4.0.0",
    "pygltflib>=1.16.0",
]

[project.scripts]
datasheet-parser = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/datasheet-parser"
Documentation = "https://github.com/yourusername/datasheet-parser#readme"
Repository = "https://github.com/yourusername/datasheet-parser.git"
Issues = "https://github.com/yourusername/datasheet-parser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
